Update index.html and add images

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <section>
         <h3>Delicious</h3>
         <h1>Italian cuizine</h1>
+        <button type="button">Order Now</button>
+        <button type="button">View Menu</button>
       </section>
       <section></section>
       <section>
